# MuseVis

./: .gitignore  .gitmodules  CMakeLists.txt  Next Step Instructions.txt  OAO.txt  Plan.md  SPEC.md  build-led.sh  build-tui.sh  run-led.sh  run-tui.sh  setup-audio.sh
.cursor/plans/: teensy-algo-replacement_bfd0d7a6.plan.md  teensy_audio_adaptation_50916769.plan.md
docs/: teensy-audio-comparison.md
include/musevis/: SharedState.h
scripts/: compare-analyzers.sh
src/: main.cpp  main_tui.cpp
src/audio/: AudioCapture.cpp  AudioCapture.h
src/debug/: BandCsvWriter.cpp  BandCsvWriter.h
src/dsp/: AnalyzerFactory.cpp  AnalyzerFactory.h  BandAnalyzer.h  BandMapper.h  BiquadFilter.h  FFTProcessor.cpp  FFTProcessor.h  FilterBankProcessor.cpp  FilterBankProcessor.h  TeensyBandLayout.h
src/led/: ColorMapper.h  LEDController.cpp  LEDController.h
src/render/: BandDisplayMapper.h  PresentationSmoothing.h  RenderEngine.cpp  RenderEngine.h  TerminalPresentation.h  TerminalRenderer.cpp  TerminalRenderer.h
tests/: audio_capture_boundary_test.cpp  build_scripts_test.sh  filter_bank_balance_test.cpp  filter_bank_processor_test.cpp  filter_bank_tests.cpp  presentation_smoothing_test.cpp  run_scripts_test.sh  shared_state_contract_test.cpp  teensy_band_layout_test.cpp  terminal_presentation_test.cpp
